# corvid

crates/corvid-cli/: Cargo.toml
crates/corvid-cli/src/: main.rs
crates/corvid-cli/src/bundle_cmd/: audit.rs  diff.rs  explain.rs  manifest.rs  mod.rs  report.rs  verify.rs
crates/corvid-cli/tests/: bundle_integration.rs  bundle_rebuild.rs  bundle_support.rs  bundle_verify.rs
crates/corvid-codegen-cl/src/lowering/: agent.rs
crates/corvid-runtime/tests/: trace_record.rs
docs/: bundle-format.md
