[package]
name = "corvid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The `corvid` command-line compiler."

[[bin]]
name = "corvid"
path = "src/main.rs"

[dependencies]
corvid-abi = { workspace = true }
corvid-ast = { workspace = true }
corvid-bind = { workspace = true }
corvid-driver = { workspace = true }
corvid-syntax = { workspace = true }
corvid-differential-verify = { workspace = true }
corvid-types = { workspace = true }
corvid-vm = { workspace = true }
corvid-repl = { workspace = true }
corvid-runtime = { workspace = true }
corvid-trace-schema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
time = { version = "0.3", features = ["parsing", "formatting"] }
tokio = { workspace = true, features = ["rt", "macros"] }
rayon = { workspace = true }
libloading = "0.8"
sha2 = "0.10"
tar = "0.4"
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
base64 = "0.22"
dirs = "5"
hex = "0.4"

[dev-dependencies]
cc = "1"
tempfile = { workspace = true }
target-lexicon = "0.13"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
base64 = "0.22"
